feat(report): add Overtime reporting methods to ReportService and ReportServiceImpl